VOTE-252 fix right alignment of dropdown

--- a/assets/styles/pages/homepage.scss
+++ b/assets/styles/pages/homepage.scss
@@ -55,6 +55,7 @@
 
 #state-combo-box {
   margin-bottom: 2.5rem;
+  position: relative;
 
   label {
     font-size: 1.5em;
